Updated page Sketcher Dimension/de

--- a/wiki/de/Sketcher_Dimension.html
+++ b/wiki/de/Sketcher_Dimension.html
@@ -94,7 +94,7 @@
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Sketcher_ToggleConstruction.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/Sketcher_ToggleConstruction.html" title="Sketcher ToggleConstruction/de">HilfsgeometrieUmschalten</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Sketcher_ConstrainDistanceX.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX/de">XAbstandFestlegen</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-    <div><a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a>
+    <div><a href="../de/Sketcher_Workbench.html" title="Sketcher Workbench/de">Sketcher</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_Sketcher.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
@@ -132,15 +132,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119144919
+Cached time: 20260119145155
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.084 seconds
-Real time usage: 0.288 seconds
+CPU time usage: 0.095 seconds
+Real time usage: 0.415 seconds
 Preprocessor visited node count: 260/1000000
-Post&#8208;expand include size: 23304/2097152 bytes
-Template argument size: 9064/2097152 bytes
+Post&#8208;expand include size: 23313/2097152 bytes
+Template argument size: 9070/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -148,19 +148,19 @@ Unstrip post&#8208;expand size: 1712/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.149      1 -total
- 34.01%   19.438      1 Template:Sketcher_Tools_navi/de
- 20.42%   11.668      2 Template:Value
- 12.99%    7.425      1 Template:Button
- 12.47%    7.125      1 Template:Userdocnavi/de
- 12.05%    6.887      2 Template:Navigation_menu_2
-  9.58%    5.473      2 Template:Incode
-  9.21%    5.266      1 Template:GuiCommand/de
-  4.68%    2.674      2 Template:Docnav/de
-  4.47%    2.556      4 Template:MenuCommand
+100.00%   59.586      1 -total
+ 19.98%   11.905      2 Template:Value
+ 19.91%   11.866      1 Template:GuiCommand/de
+ 16.72%    9.963      1 Template:Userdocnavi/de
+ 12.06%    7.185      1 Template:Button
+ 11.90%    7.090      2 Template:Incode
+  9.69%    5.771      4 Template:KEY
+  8.85%    5.273      1 Template:Sketcher_Tools_navi/de
+  8.83%    5.261      4 Template:MenuCommand
+  7.36%    4.387      2 Template:Docnav/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:332249-0!canonical and timestamp 20260119144918 and revision id 1740955. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:332249-0!canonical and timestamp 20260119145155 and revision id 1740957. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
