--- a/wiki/it/Macro_FCInfo_ToolBar.html
+++ b/wiki/it/Macro_FCInfo_ToolBar.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FCInfo ToolBar/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+FCInfo+ToolBar&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_FCInfo_ToolBar.html" class="mw-pt-progress mw-pt-progress--low" title="Macro FCInfo ToolBar/de (1% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_FCInfo_ToolBar.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro FCInfo Werkzeugleiste (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_FCInfo_ToolBar.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro FCInfo ToolBar (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_FCInfo_ToolBar.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro FCInfo ToolBar (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
@@ -268,16 +268,12 @@ km, hm, dam, m, dm, cm, mm, &micro;m, nm, pm, fm, inch, link, foot, yard, perch,
 <p><b>version 00.07</b> 16/06/2025&nbsp;: correct selection grandeur not change
 </p>
 </div> 
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>replace&nbsp;:
+<p>sostituire&nbsp;:
 </p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">QtCore</span><span class="o">.</span><span class="n">QObject</span><span class="o">.</span><span class="n">connect</span><span class="p">(</span><span class="n">comboBox_ToolBar</span><span class="p">,</span> <span class="n">QtCore</span><span class="o">.</span><span class="n">SIGNAL</span><span class="p">(</span><span class="s2">"currentIndexChanged(QString)"</span><span class="p">),</span> <span class="n">SIGNAL_comboBox_Changed</span><span class="p">)</span>
 </pre></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>by&nbsp;:
+<p>con&nbsp;:
 </p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">comboBox_ToolBar</span><span class="o">.</span><span class="n">currentTextChanged</span><span class="o">.</span><span class="n">connect</span><span class="p">(</span><span class="n">SIGNAL_comboBox_Changed</span><span class="p">)</span>
 </pre></div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -316,32 +312,32 @@ km, hm, dam, m, dm, cm, mm, &micro;m, nm, pm, fm, inch, link, foot, yard, perch,
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20251009170914
+Cached time: 20260119152552
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.102 seconds
-Real time usage: 0.905 seconds
-Preprocessor visited node count: 247/1000000
+CPU time usage: 0.054 seconds
+Real time usage: 0.210 seconds
+Preprocessor visited node count: 245/1000000
 Post&#8208;expand include size: 5548/2097152 bytes
 Template argument size: 2629/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 6/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 6837/5000000 bytes
+Unstrip post&#8208;expand size: 6848/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  792.957      1 -total
- 98.47%  780.810      6 Template:Code
-  0.54%    4.288      1 Template:Codeextralink
-  0.37%    2.945      1 Template:Macro
-  0.18%    1.466      2 Template:TRUE
-  0.16%    1.259      3 Template:Caption
-  0.10%    0.755      2 Template:FALSE
+100.00%   34.313      1 -total
+ 37.19%   12.762      2 Template:FALSE
+ 23.11%    7.928      6 Template:Code
+ 12.15%    4.168      1 Template:Macro
+ 10.52%    3.610      2 Template:TRUE
+  8.12%    2.787      3 Template:Caption
+  6.15%    2.112      1 Template:Codeextralink
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279235-0!canonical and timestamp 20251009170914 and revision id 1659411. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279235-0!canonical and timestamp 20260119152552 and revision id 1740963. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
