--- a/wiki/it/Macro_FCInfo_ToolBar.html
+++ b/wiki/it/Macro_FCInfo_ToolBar.html
@@ -77,10 +77,8 @@ Macro FCCInfo ToolBar
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Fornisce informazioni sulla forma selezionata e pu&ograve; visualizzare una conversione di raggio, diametro, lunghezza, area, volume ... in diverse unit&agrave; (metriche e imperiali) in una barra degli strumenti. Le informazioni da visualizzare sono parametrizzabili nel parametro di FreeCAD.
+<p>Fornisce informazioni sulla forma selezionata e pu&ograve; visualizzare la conversione di raggio, diametro, lunghezza, area, volume... in diverse unit&agrave; di misura (metriche e imperiali) in una barra degli strumenti. Le informazioni da visualizzare in tempo reale sono parametrizzabili nelle preferenze di FreeCAD.
 </p>
-</div>
 <div class="toccolours mw-collapsible mw-collapsed" style="cursor:not-allowed">
 <p>Temporary code for external macro link. Do not use this code. This code is used exclusively by <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>. <i>Link for optional manual installation: <a rel="nofollow" class="external text" href="https://gist.githubusercontent.com/mario52a/e382adbe41747788ad15a18eb206a872/raw/2fbf7ea13a1c2f8af616d7368e43f188334e4559/FCInfo_ToolBar.FCMacro">Macro</a></i>
 </p>
@@ -312,13 +310,13 @@ km, hm, dam, m, dm, cm, mm, &micro;m, nm, pm, fm, inch, link, foot, yard, perch,
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260119152552
+Cached time: 20260119152637
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.054 seconds
-Real time usage: 0.210 seconds
-Preprocessor visited node count: 245/1000000
+CPU time usage: 0.049 seconds
+Real time usage: 0.135 seconds
+Preprocessor visited node count: 244/1000000
 Post&#8208;expand include size: 5548/2097152 bytes
 Template argument size: 2629/2097152 bytes
 Highest expansion depth: 5/100
@@ -328,16 +326,16 @@ Unstrip post&#8208;expand size: 6848/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.313      1 -total
- 37.19%   12.762      2 Template:FALSE
- 23.11%    7.928      6 Template:Code
- 12.15%    4.168      1 Template:Macro
- 10.52%    3.610      2 Template:TRUE
-  8.12%    2.787      3 Template:Caption
-  6.15%    2.112      1 Template:Codeextralink
+100.00%   26.648      1 -total
+ 23.75%    6.328      6 Template:Code
+ 18.55%    4.942      2 Template:FALSE
+ 16.09%    4.288      2 Template:TRUE
+ 13.52%    3.603      3 Template:Caption
+ 13.18%    3.513      1 Template:Macro
+  8.94%    2.382      1 Template:Codeextralink
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279235-0!canonical and timestamp 20260119152552 and revision id 1740963. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279235-0!canonical and timestamp 20260119152637 and revision id 1740965. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
