--- a/wiki/it/Macro_FCInfo_ToolBar.html
+++ b/wiki/it/Macro_FCInfo_ToolBar.html
@@ -272,10 +272,8 @@ km, hm, dam, m, dm, cm, mm, &micro;m, nm, pm, fm, inch, link, foot, yard, perch,
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">comboBox_ToolBar</span><span class="o">.</span><span class="n">currentTextChanged</span><span class="o">.</span><span class="n">connect</span><span class="p">(</span><span class="n">SIGNAL_comboBox_Changed</span><span class="p">)</span>
 </pre></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><b>version 00.06</b> 01/06/2025&nbsp;: return to PySide
+<p><b>versione 00.06</b> 01/06/2025&nbsp;: ritorno a PySide
 </p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>versione 00.05b 06/09/2023: corretto bug calcolo 2D Bmp
 </p>
@@ -308,13 +306,13 @@ km, hm, dam, m, dm, cm, mm, &micro;m, nm, pm, fm, inch, link, foot, yard, perch,
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260119152702
+Cached time: 20260119152726
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.063 seconds
-Real time usage: 0.109 seconds
-Preprocessor visited node count: 243/1000000
+CPU time usage: 0.055 seconds
+Real time usage: 0.267 seconds
+Preprocessor visited node count: 242/1000000
 Post&#8208;expand include size: 5545/2097152 bytes
 Template argument size: 2626/2097152 bytes
 Highest expansion depth: 5/100
@@ -324,16 +322,16 @@ Unstrip post&#8208;expand size: 6848/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.089      1 -total
- 37.10%    9.678      6 Template:Code
- 22.36%    5.834      1 Template:Macro
- 13.94%    3.638      1 Template:Codeextralink
-  8.16%    2.128      3 Template:Caption
-  7.41%    1.932      2 Template:TRUE
-  7.13%    1.861      2 Template:FALSE
+100.00%   61.394      1 -total
+ 26.93%   16.534      6 Template:Code
+ 20.06%   12.313      2 Template:TRUE
+ 12.56%    7.710      1 Template:Macro
+ 11.39%    6.992      2 Template:FALSE
+  9.34%    5.735      3 Template:Caption
+  9.10%    5.587      1 Template:Codeextralink
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279235-0!canonical and timestamp 20260119152702 and revision id 1740967. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279235-0!canonical and timestamp 20260119152725 and revision id 1740969. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
