--- a/wiki/it/Macro_FCInfo_ToolBar.html
+++ b/wiki/it/Macro_FCInfo_ToolBar.html
@@ -275,11 +275,8 @@ km, hm, dam, m, dm, cm, mm, &micro;m, nm, pm, fm, inch, link, foot, yard, perch,
 <p><b>versione 00.06</b> 01/06/2025&nbsp;: ritorno a PySide
 </p><p><b>versione 00.05b</b> 06/09/2023: corretto bug calcolo 2D Bmp
 </p><p>'<i>versione 00.05<b> 09/06/2023&nbsp;: aggiunte coordinate 2D Cad (x, y) 0,0 = angolo in basso a sinistra o Bmp (x, y) 0,0 = angolo in alto a sinistra, raggioSuperficie<br>crea il test "if" ' </b></i><b>switch_User_NotInfoOnBeginning</b> dimenticato!!
+</p><p><b>versione 00.04</b> 28/06/2023&nbsp;: correzione fogli di stile e:
 </p>
-<div class="mw-translate-fuzzy">
-<p>versione 00.04 28/06/2023&nbsp;: correzione fogli di stile e:
-</p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">sommeEdgesSTR</span> <span class="o">=</span> <span class="nb">str</span><span class="p">(</span><span class="n">sommeEdges</span><span class="p">)</span>
 </pre></div>
 <p>sostituito da:
@@ -300,13 +297,13 @@ km, hm, dam, m, dm, cm, mm, &micro;m, nm, pm, fm, inch, link, foot, yard, perch,
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260119152802
+Cached time: 20260119152810
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.078 seconds
-Real time usage: 0.258 seconds
-Preprocessor visited node count: 240/1000000
+CPU time usage: 0.051 seconds
+Real time usage: 0.077 seconds
+Preprocessor visited node count: 239/1000000
 Post&#8208;expand include size: 5545/2097152 bytes
 Template argument size: 2626/2097152 bytes
 Highest expansion depth: 5/100
@@ -316,16 +313,16 @@ Unstrip post&#8208;expand size: 6848/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.597      1 -total
- 25.38%   12.081      1 Template:Macro
- 22.23%   10.580      3 Template:Caption
- 13.96%    6.646      1 Template:Codeextralink
- 13.89%    6.609      6 Template:Code
-  9.51%    4.528      2 Template:FALSE
-  8.81%    4.192      2 Template:TRUE
+100.00%   17.983      1 -total
+ 26.54%    4.772      6 Template:Code
+ 21.74%    3.910      2 Template:FALSE
+ 13.96%    2.511      1 Template:Macro
+ 13.21%    2.375      1 Template:Codeextralink
+  9.08%    1.632      3 Template:Caption
+  8.53%    1.534      2 Template:TRUE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279235-0!canonical and timestamp 20260119152802 and revision id 1740973. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279235-0!canonical and timestamp 20260119152810 and revision id 1740975. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
