--- a/wiki/it/Macro_FCInfo_ToolBar.html
+++ b/wiki/it/Macro_FCInfo_ToolBar.html
@@ -284,24 +284,21 @@ km, hm, dam, m, dm, cm, mm, &micro;m, nm, pm, fm, inch, link, foot, yard, perch,
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">sommeEdgesSTR</span> <span class="o">=</span> <span class="nb">str</span><span class="p">(</span><span class="nb">round</span><span class="p">(</span><span class="n">sommeEdges</span> <span class="o">*</span> <span class="n">uniteM</span><span class="p">,</span> <span class="n">seT_User_DecimalValue</span><span class="p">))</span> <span class="o">+</span> <span class="s2">" "</span> <span class="o">+</span> <span class="n">uniteMs</span>
 </pre></div>
 <p><b>version: (00.02 +) 00.03</b> 2022/03/22&nbsp;: aggiunto somma di tutti i bordi
+</p><p><b>version: 00.02</b> 2022/03/14&nbsp;: aggiunto calcolo in tempo reale (con preselezione), dimensione della barra degli strumenti, aggiunto mesh informativa e punti
 </p>
-<div class="mw-translate-fuzzy">
-<p>version: 00.02 2022/03/14&nbsp;: add calcul in real time (with preselection), dimension of toolBar, add info mesh and points
-</p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>version: 00.01 2022/02/16&nbsp;:
 </p>
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260119152846
+Cached time: 20260119152930
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.054 seconds
-Real time usage: 0.077 seconds
-Preprocessor visited node count: 238/1000000
+CPU time usage: 0.055 seconds
+Real time usage: 0.226 seconds
+Preprocessor visited node count: 237/1000000
 Post&#8208;expand include size: 5545/2097152 bytes
 Template argument size: 2626/2097152 bytes
 Highest expansion depth: 5/100
@@ -311,16 +308,16 @@ Unstrip post&#8208;expand size: 6848/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.226      1 -total
- 30.69%    4.366      1 Template:Macro
- 19.80%    2.817      6 Template:Code
- 16.28%    2.316      1 Template:Codeextralink
- 11.93%    1.697      3 Template:Caption
-  8.13%    1.156      2 Template:FALSE
-  6.82%    0.970      2 Template:TRUE
+100.00%   45.078      1 -total
+ 33.44%   15.073      1 Template:Macro
+ 19.75%    8.902      6 Template:Code
+ 14.79%    6.669      3 Template:Caption
+ 14.35%    6.467      1 Template:Codeextralink
+  8.86%    3.993      2 Template:FALSE
+  4.41%    1.986      2 Template:TRUE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279235-0!canonical and timestamp 20260119152846 and revision id 1740977. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279235-0!canonical and timestamp 20260119152930 and revision id 1740979. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
