--- a/wiki/it/Macro_FCInfo_ToolBar.html
+++ b/wiki/it/Macro_FCInfo_ToolBar.html
@@ -285,20 +285,17 @@ km, hm, dam, m, dm, cm, mm, &micro;m, nm, pm, fm, inch, link, foot, yard, perch,
 </pre></div>
 <p><b>version: (00.02 +) 00.03</b> 2022/03/22&nbsp;: aggiunto somma di tutti i bordi
 </p><p><b>version: 00.02</b> 2022/03/14&nbsp;: aggiunto calcolo in tempo reale (con preselezione), dimensione della barra degli strumenti, aggiunto mesh informativa e punti
+</p><p><b>version: 00.01</b> 2022/02/16&nbsp;:
 </p>
-<div class="mw-translate-fuzzy">
-<p>version: 00.01 2022/02/16&nbsp;:
-</p>
-</div>
 <!-- 
 NewPP limit report
-Cached time: 20260119152930
+Cached time: 20260119152945
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.055 seconds
-Real time usage: 0.226 seconds
-Preprocessor visited node count: 237/1000000
+Real time usage: 0.165 seconds
+Preprocessor visited node count: 236/1000000
 Post&#8208;expand include size: 5545/2097152 bytes
 Template argument size: 2626/2097152 bytes
 Highest expansion depth: 5/100
@@ -308,16 +305,16 @@ Unstrip post&#8208;expand size: 6848/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   45.078      1 -total
- 33.44%   15.073      1 Template:Macro
- 19.75%    8.902      6 Template:Code
- 14.79%    6.669      3 Template:Caption
- 14.35%    6.467      1 Template:Codeextralink
-  8.86%    3.993      2 Template:FALSE
-  4.41%    1.986      2 Template:TRUE
+100.00%   21.181      1 -total
+ 34.33%    7.271      1 Template:Macro
+ 21.87%    4.633      6 Template:Code
+ 16.74%    3.546      1 Template:Codeextralink
+  9.98%    2.113      3 Template:Caption
+  6.90%    1.462      2 Template:FALSE
+  5.12%    1.085      2 Template:TRUE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279235-0!canonical and timestamp 20260119152930 and revision id 1740979. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279235-0!canonical and timestamp 20260119152945 and revision id 1740981. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
