--- a/wiki/it/Macro_FCInfo_ToolBar.html
+++ b/wiki/it/Macro_FCInfo_ToolBar.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_FCInfo_ToolBar.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro FCInfo Werkzeugleiste (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_FCInfo_ToolBar.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro FCInfo ToolBar (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_FCInfo_ToolBar.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro FCInfo ToolBar (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_FCInfo_ToolBar.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: FCInfo w pasku narz&#281;dziowym (1% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -260,11 +260,8 @@ km, hm, dam, m, dm, cm, mm, &micro;m, nm, pm, fm, inch, link, foot, yard, perch,
 </p><p><span id="Version"></span>
 </p>
 <h2><span class="mw-headline" id="Versione">Versione</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><b>version 00.07</b> 16/06/2025&nbsp;: correct selection grandeur not change
-</p>
-</div> 
-<p>sostituire&nbsp;:
+<p><b>versione 00.07</b> 16/06/2025&nbsp;: corretto selezione grandezza non cambia 
+</p><p>sostituire&nbsp;:
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">QtCore</span><span class="o">.</span><span class="n">QObject</span><span class="o">.</span><span class="n">connect</span><span class="p">(</span><span class="n">comboBox_ToolBar</span><span class="p">,</span> <span class="n">QtCore</span><span class="o">.</span><span class="n">SIGNAL</span><span class="p">(</span><span class="s2">"currentIndexChanged(QString)"</span><span class="p">),</span> <span class="n">SIGNAL_comboBox_Changed</span><span class="p">)</span>
 </pre></div>
@@ -289,32 +286,32 @@ km, hm, dam, m, dm, cm, mm, &micro;m, nm, pm, fm, inch, link, foot, yard, perch,
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260119152945
+Cached time: 20260119153041
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.055 seconds
-Real time usage: 0.165 seconds
-Preprocessor visited node count: 236/1000000
+CPU time usage: 0.054 seconds
+Real time usage: 0.264 seconds
+Preprocessor visited node count: 235/1000000
 Post&#8208;expand include size: 5545/2097152 bytes
 Template argument size: 2626/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 6/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 6848/5000000 bytes
+Unstrip post&#8208;expand size: 6852/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.181      1 -total
- 34.33%    7.271      1 Template:Macro
- 21.87%    4.633      6 Template:Code
- 16.74%    3.546      1 Template:Codeextralink
-  9.98%    2.113      3 Template:Caption
-  6.90%    1.462      2 Template:FALSE
-  5.12%    1.085      2 Template:TRUE
+100.00%   62.550      1 -total
+ 45.17%   28.254      6 Template:Code
+ 31.43%   19.662      2 Template:TRUE
+  5.51%    3.445      2 Template:FALSE
+  5.22%    3.262      1 Template:Macro
+  4.53%    2.831      1 Template:Codeextralink
+  2.79%    1.748      3 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279235-0!canonical and timestamp 20260119152945 and revision id 1740981. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279235-0!canonical and timestamp 20260119153041 and revision id 1740983. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
