--- a/wiki/it/Macro_FCInfo_ToolBar.html
+++ b/wiki/it/Macro_FCInfo_ToolBar.html
@@ -120,7 +120,7 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/e382adbe41747788ad1
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <p>Dopo aver eseguito la macro, andare a Menu &rarr; Strumenti &rarr; Modifica parametri ... :BaseApp/Preferences/Macros/FCMmacros/FCInfo_ToolBar
 </p><p>e aggiungere le informazioni da visualizzare.
-</p><p>Le informazioni complete vengono visualizzate nella finestra ToolTip, l'opzione selezionata &egrave; visibile se viene visualizzato di uno "<big>*</big>".
+</p><p>Le informazioni complete vengono visualizzate nella finestra ToolTip, l'opzione selezionata &egrave; visibile se viene visualizzato un "<big>*</big>".
 </p><p>Usate il pulsante reset dopo aver cambiato un'opzione nella finestra dei parametri.
 </p><p>L'unit&agrave; delle dimensione pu&ograve; essere selezionata:
 km, hm, dam, m, dm, cm, mm, &micro;m, nm, pm, fm, inch, link, foot, yard, perch, chain, furlong, mile, league, nautique.
@@ -286,12 +286,12 @@ km, hm, dam, m, dm, cm, mm, &micro;m, nm, pm, fm, inch, link, foot, yard, perch,
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260119153041
+Cached time: 20260119153201
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.054 seconds
-Real time usage: 0.264 seconds
+CPU time usage: 0.078 seconds
+Real time usage: 0.331 seconds
 Preprocessor visited node count: 235/1000000
 Post&#8208;expand include size: 5545/2097152 bytes
 Template argument size: 2626/2097152 bytes
@@ -302,16 +302,16 @@ Unstrip post&#8208;expand size: 6852/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   62.550      1 -total
- 45.17%   28.254      6 Template:Code
- 31.43%   19.662      2 Template:TRUE
-  5.51%    3.445      2 Template:FALSE
-  5.22%    3.262      1 Template:Macro
-  4.53%    2.831      1 Template:Codeextralink
-  2.79%    1.748      3 Template:Caption
+100.00%   38.621      1 -total
+ 24.22%    9.353      6 Template:Code
+ 21.88%    8.452      1 Template:Macro
+ 19.70%    7.609      1 Template:Codeextralink
+ 11.32%    4.370      2 Template:FALSE
+ 10.29%    3.973      2 Template:TRUE
+  8.32%    3.214      3 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279235-0!canonical and timestamp 20260119153041 and revision id 1740983. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279235-0!canonical and timestamp 20260119153201 and revision id 1740985. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
