Updated page Macro FCInfo ToolBar/it

--- a/wiki/it/Macro_FCInfo_ToolBar.html
+++ b/wiki/it/Macro_FCInfo_ToolBar.html
@@ -121,7 +121,7 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/e382adbe41747788ad1
 <p>Dopo aver eseguito la macro, andare a Menu &rarr; Strumenti &rarr; Modifica parametri ... :BaseApp/Preferences/Macros/FCMmacros/FCInfo_ToolBar
 </p><p>e aggiungere le informazioni da visualizzare.
 </p><p>Le informazioni complete vengono visualizzate nella finestra ToolTip, l'opzione selezionata &egrave; visibile se viene visualizzato un "<big>*</big>".
-</p><p>Usate il pulsante reset dopo aver cambiato un'opzione nella finestra dei parametri.
+</p><p>Usare il pulsante reset dopo aver cambiato un'opzione nella finestra dei parametri.
 </p><p>L'unit&agrave; delle dimensione pu&ograve; essere selezionata:
 km, hm, dam, m, dm, cm, mm, &micro;m, nm, pm, fm, inch, link, foot, yard, perch, chain, furlong, mile, league, nautique.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_ToolBar_01.png&amp;filetimestamp=20220314202759&amp;.html" class="mw-file-description" title="FCInfo_ToolBar the info toolTip"><img alt="FCInfo_ToolBar the info toolTip" src="../File/Macro_FCInfo_ToolBar_01.png" decoding="async" width="800" height="600" class="mw-file-element" data-file-width="800" data-file-height="600"></a></span>
@@ -286,12 +286,12 @@ km, hm, dam, m, dm, cm, mm, &micro;m, nm, pm, fm, inch, link, foot, yard, perch,
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260119153201
+Cached time: 20260119153223
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.078 seconds
-Real time usage: 0.331 seconds
+CPU time usage: 0.061 seconds
+Real time usage: 0.239 seconds
 Preprocessor visited node count: 235/1000000
 Post&#8208;expand include size: 5545/2097152 bytes
 Template argument size: 2626/2097152 bytes
@@ -302,16 +302,16 @@ Unstrip post&#8208;expand size: 6852/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.621      1 -total
- 24.22%    9.353      6 Template:Code
- 21.88%    8.452      1 Template:Macro
- 19.70%    7.609      1 Template:Codeextralink
- 11.32%    4.370      2 Template:FALSE
- 10.29%    3.973      2 Template:TRUE
-  8.32%    3.214      3 Template:Caption
+100.00%   58.632      1 -total
+ 37.08%   21.743      2 Template:TRUE
+ 21.80%   12.782      6 Template:Code
+ 14.55%    8.533      1 Template:Macro
+  8.26%    4.844      3 Template:Caption
+  7.21%    4.229      1 Template:Codeextralink
+  6.23%    3.653      2 Template:FALSE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279235-0!canonical and timestamp 20260119153201 and revision id 1740985. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279235-0!canonical and timestamp 20260119153222 and revision id 1740987. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
