Updated page Macro FCInfo ToolBar/it

--- a/wiki/it/Macro_FCInfo_ToolBar.html
+++ b/wiki/it/Macro_FCInfo_ToolBar.html
@@ -214,7 +214,7 @@ km, hm, dam, m, dm, cm, mm, &micro;m, nm, pm, fm, inch, link, foot, yard, perch,
 <p><span id="in_command_line"></span>
 </p>
 <h4><span class="mw-headline" id="in_linea_di_comando">in linea di comando</span></h4>
-<p>Nella tua scorciatoia <i>verifica il tuo percorso giusto</i>.
+<p>Nella scorciatoia <i>verificare che il percorso sia corretto</i>.
 </p><p>"Percorso_completo_di_FreeCAD" "Percorso_completo_della_macro.FCMacro"
 </p><p>esempio:
 </p>
@@ -286,12 +286,12 @@ km, hm, dam, m, dm, cm, mm, &micro;m, nm, pm, fm, inch, link, foot, yard, perch,
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260119153223
+Cached time: 20260119153406
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.061 seconds
-Real time usage: 0.239 seconds
+CPU time usage: 0.055 seconds
+Real time usage: 0.279 seconds
 Preprocessor visited node count: 235/1000000
 Post&#8208;expand include size: 5545/2097152 bytes
 Template argument size: 2626/2097152 bytes
@@ -302,16 +302,16 @@ Unstrip post&#8208;expand size: 6852/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   58.632      1 -total
- 37.08%   21.743      2 Template:TRUE
- 21.80%   12.782      6 Template:Code
- 14.55%    8.533      1 Template:Macro
-  8.26%    4.844      3 Template:Caption
-  7.21%    4.229      1 Template:Codeextralink
-  6.23%    3.653      2 Template:FALSE
+100.00%   67.995      1 -total
+ 27.05%   18.390      1 Template:Macro
+ 19.11%   12.991      6 Template:Code
+ 18.86%   12.826      2 Template:TRUE
+ 16.79%   11.415      1 Template:Codeextralink
+  9.43%    6.410      3 Template:Caption
+  6.69%    4.546      2 Template:FALSE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279235-0!canonical and timestamp 20260119153222 and revision id 1740987. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279235-0!canonical and timestamp 20260119153406 and revision id 1740989. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
