--- a/wiki/it/Macro_Align_Object_to_View.html
+++ b/wiki/it/Macro_Align_Object_to_View.html
@@ -137,9 +137,9 @@ App.ActiveDocument.getObject(Nameelement).Placement=pl</pre>
 		</li>
 </ul>
 </center>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Credits">Credits</span></h2>
-</div>
+<p><span id="Credits"></span>
+</p>
+<h2><span class="mw-headline" id="Ringraziamenti">Ringraziamenti</span></h2>
 <div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Crediti">Crediti</span></h2>
 <p>Grazie a rentlau_64 per il codice semplificato
@@ -147,12 +147,12 @@ App.ActiveDocument.getObject(Nameelement).Placement=pl</pre>
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260119160109
+Cached time: 20260119160217
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.046 seconds
-Real time usage: 0.077 seconds
+CPU time usage: 0.049 seconds
+Real time usage: 0.121 seconds
 Preprocessor visited node count: 122/1000000
 Post&#8208;expand include size: 2083/2097152 bytes
 Template argument size: 1132/2097152 bytes
@@ -163,12 +163,12 @@ Unstrip post&#8208;expand size: 6235/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.412      1 -total
- 56.86%    3.646      1 Template:Macro/it
- 41.58%    2.666      1 Template:MacroCode
+100.00%    9.892      1 -total
+ 50.11%    4.957      1 Template:MacroCode
+ 47.97%    4.745      1 Template:Macro/it
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55110-0!canonical and timestamp 20260119160109 and revision id 1740999. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55110-0!canonical and timestamp 20260119160217 and revision id 1741001. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
