Created page with "== La Macro =="

--- a/wiki/it/Macro_Apothem_Based_Prism_GUI.html
+++ b/wiki/it/Macro_Apothem_Based_Prism_GUI.html
@@ -1,10 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Apothem Based Prism GUI/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+Apothem+Based+Prism+GUI&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_Apothem_Based_Prism_GUI.html" class="mw-pt-progress mw-pt-progress--med" title="Makro Apothem-basierte Prisma-GUI (54% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_Apothem_Based_Prism_GUI.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Apothem-basierte Prisma-GUI (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Apothem_Based_Prism_GUI.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Apothem Based Prism GUI (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/Macro_Apothem_Based_Prism_GUI.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Apothem Based Prism GUI (54% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Macro_Apothem_Based_Prism_GUI.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Apothem Based Prism GUI (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/Macro_Apothem_Based_Prism_GUI.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Apothem Based Prism GUI (54% translated)" lang="hr" dir="ltr">hrvatski</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
-<li><a href="../pl/Macro_Apothem_Based_Prism_GUI.html" class="mw-pt-progress mw-pt-progress--med" title="Makrodefinicja: Apothem Based Prism GUI (54% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Macro_Apothem_Based_Prism_GUI.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Apothem Based Prism GUI (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ko/Macro_Apothem_Based_Prism_GUI.html" class="mw-pt-progress mw-pt-progress--med" title="&#48320;&#49900;&#44144;&#47532; &#44592;&#48152; &#44033;&#44592;&#46181; GUI &#47588;&#53356;&#47196; (31% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -85,11 +85,11 @@ Prisma da apotema
 </p><p>Quando viene eseguita, la Macro presenta all'utente la finestra di dialogo che si vede nella figura sottostante. Per prima cosa inserire la distanza che si vuole avere tra le facce. Per la distanza si pu&ograve; usare qualsiasi valore, anche decimale, ma non una frazione. Dopo, inserire il numero di lati. Questo numero deve essere un numero intero e deve essere un numero pari e per ottenere dei risultati soddisfacenti. Infine, inserire l'altezza del prisma. Di nuovo, si pu&ograve; usare qualsiasi valore, anche decimale. Fare clic su OK per creare il prisma nel documento. 
 </p>
 <figure class="mw-default-size mw-halign-center" typeof="mw:File"><a href="../index.php?title=ABP_Screenshot.png&amp;filetimestamp=20141024182502&amp;.html" class="mw-file-description"><img src="../File/ABP_Screenshot.png" decoding="async" width="364" height="286" class="mw-file-element" data-file-width="364" data-file-height="286"></a><figcaption></figcaption></figure>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="The_Macro">The Macro</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
+<p><span id="The_Macro"></span>
+</p>
 <h2><span class="mw-headline" id="La_Macro">La Macro</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="La_Macro_2">La Macro</span></h2>
 </div>
 <p><b>Macro_Apothem_Based_Prism_GUI.FCMacro</b>
 </p>
@@ -199,28 +199,28 @@ p()</pre>
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20251022140107
+Cached time: 20260119160745
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.055 seconds
-Real time usage: 0.060 seconds
+CPU time usage: 0.033 seconds
+Real time usage: 0.078 seconds
 Preprocessor visited node count: 112/1000000
 Post&#8208;expand include size: 1980/2097152 bytes
 Template argument size: 3072/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4274/5000000 bytes
+Unstrip post&#8208;expand size: 4292/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    3.481      1 -total
- 60.53%    2.107      1 Template:Macro/it
- 36.63%    1.275      1 Template:MacroCode
+100.00%    9.260      1 -total
+ 50.41%    4.668      1 Template:Macro/it
+ 47.94%    4.439      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:44060-0!canonical and timestamp 20251022140107 and revision id 1672241. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:44060-0!canonical and timestamp 20260119160745 and revision id 1741017. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
