Created page with "== Aggiunte =="

--- a/wiki/it/Macro_Apothem_Based_Prism_GUI.html
+++ b/wiki/it/Macro_Apothem_Based_Prism_GUI.html
@@ -3,7 +3,7 @@
 <li><a href="../Macro_Apothem_Based_Prism_GUI.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Apothem Based Prism GUI (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Apothem_Based_Prism_GUI.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Apothem Based Prism GUI (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/Macro_Apothem_Based_Prism_GUI.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Apothem Based Prism GUI (54% translated)" lang="hr" dir="ltr">hrvatski</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Apothem_Based_Prism_GUI.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Apothem Based Prism GUI (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ko/Macro_Apothem_Based_Prism_GUI.html" class="mw-pt-progress mw-pt-progress--med" title="&#48320;&#49900;&#44144;&#47532; &#44592;&#48152; &#44033;&#44592;&#46181; GUI &#47588;&#53356;&#47196; (31% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -177,9 +177,9 @@ class p():
         self.dialog.exec_()
  
 p()</pre>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Additions">Additions</span></h2>
-</div>
+<p><span id="Additions"></span>
+</p>
+<h2><span class="mw-headline" id="Aggiunte">Aggiunte</span></h2>
 <div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Altro">Altro</span></h2>
 <p>L'icona SVG da usare per il collegamento nella barra degli strumenti personalizzata.
@@ -197,28 +197,28 @@ p()</pre>
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260119160804
+Cached time: 20260119160820
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.037 seconds
-Real time usage: 0.178 seconds
+CPU time usage: 0.030 seconds
+Real time usage: 0.067 seconds
 Preprocessor visited node count: 109/1000000
 Post&#8208;expand include size: 1980/2097152 bytes
 Template argument size: 3072/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4292/5000000 bytes
+Unstrip post&#8208;expand size: 4293/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.760      1 -total
- 50.79%    8.513      1 Template:Macro/it
- 48.54%    8.136      1 Template:MacroCode
+100.00%    6.337      1 -total
+ 60.64%    3.843      1 Template:Macro/it
+ 37.84%    2.398      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:44060-0!canonical and timestamp 20260119160804 and revision id 1741019. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:44060-0!canonical and timestamp 20260119160820 and revision id 1741021. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
