Updated page TechDraw CosmeticCircle/fr

--- a/wiki/fr/TechDraw_CosmeticCircle.html
+++ b/wiki/fr/TechDraw_CosmeticCircle.html
@@ -61,17 +61,15 @@
 <p><span id="Usage_create"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez un point central dans une vue TechDraw ou dans la <a href="../fr/3D_View.html" title="3D View/fr">vue 3D</a>.</li>
 <li>Si vous avez s&eacute;lectionn&eacute; un point dans la vue 3D, ajoutez la bonne vue TechDraw &agrave; la s&eacute;lection en la s&eacute;lectionnant dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticCircle.svg&amp;filetimestamp=20240708191327&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Cercle cosm&eacute;tique par 1 point</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Ajouter des lignes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticCircle.svg&amp;filetimestamp=20240708191327&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cercle cosm&eacute;tique par 1 point</b> du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Taraudages/filetages/cosm&eacute;tiques &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticCircle.svg&amp;filetimestamp=20240708191327&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cercle cosm&eacute;tique par 1 point</b> du menu.</li></ul></li>
 <li>Un panneau de t&acirc;ches s'ouvre.</li>
 <li>Ajustez &eacute;ventuellement les coordonn&eacute;es du point central, le rayon et les angles de d&eacute;part et de fin du cercle.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li>
 <li>Un cercle cosm&eacute;tique est ajout&eacute;. Dans le cas d'un point central 3D, le cercle est situ&eacute; &agrave; la projection du point.</li></ol>
-</div>
 <p><span id="Usage_edit"></span>
 </p>
 <h2><span id=".C3.89dition"></span><span class="mw-headline" id="&Eacute;dition">&Eacute;dition</span></h2>
@@ -147,15 +145,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119183154
+Cached time: 20260119183208
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.095 seconds
-Real time usage: 0.465 seconds
-Preprocessor visited node count: 408/1000000
-Post&#8208;expand include size: 27299/2097152 bytes
-Template argument size: 10433/2097152 bytes
+CPU time usage: 0.087 seconds
+Real time usage: 0.388 seconds
+Preprocessor visited node count: 407/1000000
+Post&#8208;expand include size: 27314/2097152 bytes
+Template argument size: 10448/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -163,19 +161,19 @@ Unstrip post&#8208;expand size: 1651/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  101.625      1 -total
- 32.82%   33.350      1 Template:TechDraw_Tools_navi/fr
- 27.73%   28.185      2 Template:Navigation_menu_2
- 10.94%   11.113      2 Template:Docnav/fr
- 10.43%   10.600      1 Template:Userdocnavi/fr
-  9.34%    9.493      1 Template:GuiCommand/fr
-  8.30%    8.439      1 Template:Caption
-  8.15%    8.282      4 Template:Button
-  5.51%    5.599      1 Template:Incode
-  4.93%    5.014      2 Template:MenuCommand
+100.00%  120.094      1 -total
+ 28.18%   33.848      2 Template:Navigation_menu_2
+ 28.05%   33.683      1 Template:TechDraw_Tools_navi/fr
+ 13.33%   16.012      1 Template:Userdocnavi/fr
+ 13.24%   15.903      2 Template:Docnav/fr
+  9.45%   11.345      4 Template:Button
+  8.77%   10.538      1 Template:GuiCommand/fr
+  6.81%    8.182      1 Template:Caption
+  5.75%    6.903      2 Template:MenuCommand
+  5.39%    6.473      1 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322396-0!canonical and timestamp 20260119183153 and revision id 1741041. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322396-0!canonical and timestamp 20260119183208 and revision id 1741043. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
