Updated page TechDraw CosmeticCircle/fr

--- a/wiki/fr/TechDraw_CosmeticCircle.html
+++ b/wiki/fr/TechDraw_CosmeticCircle.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw CosmeticCircle/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+CosmeticCircle&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Hilfskreis (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_CosmeticCircle.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw CosmeticCircle (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Cerchio cosmetico (74% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Dodaj okr&#261;g kosmetyczny (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--low" title="TechDraw CosmeticCircle
@@ -75,15 +75,13 @@
 <h2><span id=".C3.89dition"></span><span class="mw-headline" id="&Eacute;dition">&Eacute;dition</span></h2>
 <p>Pour modifier les attributs d'un cercle cosm&eacute;tique&nbsp;:
 </p>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez le cercle cosm&eacute;tique.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticCircle.svg&amp;filetimestamp=20240708191327&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Cercle cosm&eacute;tique par 1 point</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Ajouter des lignes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticCircle.svg&amp;filetimestamp=20240708191327&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cercle cosm&eacute;tique par 1 point</b> du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Taraudages/filetages/cosm&eacute;tiques &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticCircle.svg&amp;filetimestamp=20240708191327&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cercle cosm&eacute;tique par 1 point</b> du menu.</li></ul></li>
 <li>Un panneau de t&acirc;ches s'ouvre.</li>
 <li>Ajustez les coordonn&eacute;es du point central, le rayon, ou les angles de d&eacute;but et de fin du cercle.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol>
-</div>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
@@ -145,35 +143,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119183208
+Cached time: 20260119183221
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.087 seconds
-Real time usage: 0.388 seconds
-Preprocessor visited node count: 407/1000000
-Post&#8208;expand include size: 27314/2097152 bytes
-Template argument size: 10448/2097152 bytes
+CPU time usage: 0.092 seconds
+Real time usage: 0.328 seconds
+Preprocessor visited node count: 406/1000000
+Post&#8208;expand include size: 27329/2097152 bytes
+Template argument size: 10463/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1651/5000000 bytes
+Unstrip post&#8208;expand size: 1655/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  120.094      1 -total
- 28.18%   33.848      2 Template:Navigation_menu_2
- 28.05%   33.683      1 Template:TechDraw_Tools_navi/fr
- 13.33%   16.012      1 Template:Userdocnavi/fr
- 13.24%   15.903      2 Template:Docnav/fr
-  9.45%   11.345      4 Template:Button
-  8.77%   10.538      1 Template:GuiCommand/fr
-  6.81%    8.182      1 Template:Caption
-  5.75%    6.903      2 Template:MenuCommand
-  5.39%    6.473      1 Template:Incode
+100.00%  117.174      1 -total
+ 34.92%   40.922      1 Template:TechDraw_Tools_navi/fr
+ 28.58%   33.486      2 Template:Navigation_menu_2
+ 18.82%   22.057      2 Template:Docnav/fr
+ 13.15%   15.414      1 Template:Userdocnavi/fr
+ 12.48%   14.620      1 Template:GuiCommand/fr
+  5.52%    6.464      1 Template:Incode
+  4.18%    4.900      1 Template:Caption
+  4.10%    4.805      1 Template:KEY
+  3.44%    4.033      4 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322396-0!canonical and timestamp 20260119183208 and revision id 1741043. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322396-0!canonical and timestamp 20260119183220 and revision id 1741045. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
